fixed overflow errors and spacing problems

--- a/portfolio/proj_page.css
+++ b/portfolio/proj_page.css
@@ -1,14 +1,16 @@
 .disabled{display: none;}
 
+#main_wrapper{
+    min-height: 100vh !important;
+}
+
 /* General grid */
 .grid-main{
-    --gap: var(--space-large);
-
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-template-areas:
         "video info";
-    gap: var(--gap);
+    gap: var(--space-large);
     max-width: 65%;
     margin: 0 auto;
 }
@@ -122,7 +124,8 @@
         "a"
         "b"
         "c";
-    grid-gap: var(--gap);
+    gap: var(--space-small);
+    place-items: start;
 }
 
 .grid-main__heading{
@@ -137,6 +140,7 @@
     grid-area: c;
     display: grid;
     gap: var(--space-smallest);
+    width: 100%;
 }
 
 #program-list{
@@ -155,13 +159,11 @@
 
 @media only screen and (max-width: 1050px){
     .grid-main{
-        --gap: var(--space-large);
         grid-template-columns: 100%;
         grid-template-rows: auto;
         grid-template-areas:
             "video"
             "info";
-        gap: var(--gap);
         max-width: 80%;
         padding-block: calc(var(--space-largest) * 2);
     }
